# sammurai

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  AGENTS.md  CLAUDE.md  Dockerfile  Makefile  README.md  config-personal.yaml.example  config-work.yaml.example  config.yaml.example  docker-compose.yml  pyproject.toml  requirements.txt  test_redaction.py
docs/: CONTEXT.md  INTENT.md  SPEC.md  entity_store_usage.md  prd_sammurai_v2.md
docs/architecture/: parallel_processing.md
docs/plans/: 2026-03-07-llm-improvements.md
integrations/hermes/: README.md  SKILL.md
integrations/mcp/: HERMES_INSTRUCTIONS.md  README.md  hermes_mcp_config.json  sammurai_mcp_server.py  sammurai_mcp_wrapper.sh
scripts/: email_cleanup_suggest.py  email_review.py  eval_cognee_ragas.py  inject-secrets.ps1  inject-secrets.sh  reauth_gmail.py  setup-secrets.sh  test_entity_mcp.py  validate_e2e.py
src/: __init__.py
src/backend/: agent_daemon.py  brain_init.py  cli.py  cognee_store.py  config.py  database.py  digest_runner.py  document_parser.py  embeddings.py  (+23 more)
systemd/: README.md  emailsync.service  sammurai-agent.service  sammurai-digest-personal.service  sammurai-digest-personal.timer  sammurai-digest-work.service  sammurai-digest-work.timer  sammurai-digest.service  sammurai-digest.timer
tests/: test_cli.py  test_cli_enrichment.py  test_database.py  test_digest_email_integration.py  test_document_integration.py  test_document_parser.py  test_email_database.py  test_emailsync_daemon.py  test_entity_extraction.py  test_gmail_client.py  test_intent_router_ollama.py  test_llm_client.py  test_models.py  test_ollama_client.py  test_parallel.py  test_parser.py  test_rich_document_parser.py  test_security_fixes.py  test_topic_extractor.py  test_url_extractor.py
(+1 files in other folders)
