[project]
name = "sammurai"
version = "0.2.0"
description = "WhatsApp Second Brain — autonomous wiki compiler + RAG agent"
requires-python = ">=3.12"

[project.scripts]
sammurai = "src.backend.cli:main"
sammurai-init-brain = "src.backend.brain_init:main"
sammurai-digest = "src.backend.digest_runner:main"
sammurai-agent = "src.backend.agent_daemon:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
    "D",  # pydocstyle
]
ignore = [
    "D100", # Missing docstring in public module
    "D104", # Missing docstring in public package
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D"] # Ignore docstring requirements in tests